--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width">
     <title>Store notes</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="manifest" href="manifest.json">
     <script src="app.js"></script>
+    <meta name="theme-color" content="#ffc252">
+    <link rel="apple-touch-icon" href="icons/icon-512.png">
 </head>
 
 <body>
