upd viewport for iphone

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width">
+    <!-- ios 14< viewport-fit=cover -->
+    <meta name="viewport" content="width=device-width,viewport-fit=cover">
     <title>Store notes</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
