--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
     <script src="app.js"></script>
+    <script src="sw-register.js"></script>
     <meta name="theme-color" content="#ffc252">
     <link rel="apple-touch-icon" href="icons/icon-512.png">
 </head>
