offline notes & share button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="app.js"></script>
     <script src="sw-register.js"></script>
     <meta name="theme-color" content="#ffc252">
+    <meta name="description" content="PWA Base">
     <link rel="apple-touch-icon" href="icons/icon-512.png">
 </head>
 
@@ -30,7 +31,13 @@
         <li>
             <button id="btnLearn">
           
-                Learn
+                Learn code!
+            </button>
+        </li>
+        <li>
+            <button id="btnShare">
+          
+                Share
             </button>
         </li>
     </ul>
