--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
                 Share
             </button>
         </li>
+        <li>
+            <button id="btnInstall">
+          
+                Install
+            </button>
+        </li>
     </ul>
     <ul id="notes">
 
